--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.0",
-        "sweetalert2": "^11.4.17"
+        "sweetalert2": "^11.4.17",
+        "toastr": "^2.1.4"
     }
 }
