--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-sitemap": "^6.2",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
